--- a/localisation/english/ww1_bulgaria_I_english.yml
+++ b/localisation/english/ww1_bulgaria_I_english.yml
@@ -410,7 +410,7 @@ ww1_BUL_TUR.51.b: "Cease Negotiations"
 
 ww1_BUL_TUR.52.t: "Border Migration"
 ww1_BUL_TUR.52.d: "With the growing instability in the region, a significant portion of the population is moving from Turkish-controlled territories to the Bulgarian state of Plovdiv. This influx of people could provide more manpower to Bulgaria, though it may also bring social and logistical challenges."
-ww1_BUL_TUR.52.a: "Well, welcome to Plovdiv."
+ww1_BUL_TUR.52.a: "Welcome to Plovdiv."
 
 ww1_BUL_TUR.53.t: "Border Migration"
 ww1_BUL_TUR.53.d: "The chaos near the Bulgarian border has forced Turkish citizens to flee from their homes. The movement of people may affect Turkey’s manpower reserves and
