--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -8694,7 +8694,39 @@ ottoman_minority_tt_desc_edirne_tt:0 "[ottoman_minority_tt_desc_edirne][TUR_otto
  POR_expand_autocratic_influence_desc:0 ""
  por_unlock_mon_decisions_tt:0 "Unlocks §YExpand Autocratic Influence§! Sub-Decisions."
  POR_empower_the_carbonaria:0 "Empower the Carbonária"
- POR_empower_the_carbonaria_desc:0 "" 
+ POR_empower_the_carbonaria_desc:0 ""
+ POR_colonial_sphere:0 "The Colonial Sphere"
+ POR_colonial_sphere_desc:0 ""
+ POR_colonial_forced_labor_tt:0 "Will add the §YColonial Forced Labor§! state-modifier in all current colonial states."
+ POR_policy_on_forced_labor_tt:0 "The current government will try and pass a "§YPolicy on Indigenous Labour§!", if §Rfailed§!, it could bolster §Grepublican support§! and have §Rdrastic consequences§!."
+ POR_policy_on_forced_labor:0 "Policy on Indigenous Labor"
+ POR_policy_on_forced_labor_desc:0 ""
+ POR_teach_portuguese_in_mission_schools:0 "Teach Portuguese in Mission Schools"
+ POR_teach_portuguese_in_mission_schools_desc:0 ""
+ POR_appoint_antonio_marques_perdigao_governor:0 "Appoint António Marques Perdigão as Governor of Guinea"
+ POR_appoint_antonio_marques_perdigao_governor_desc:0 ""
+ POR_seize_the_kasanje_kingdom:0 "Seize the Kasanje Kingdom"
+ POR_seize_the_kasanje_kingdom_desc:0 ""
+ POR_promulgate_the_carta_organic_law:0 "Promulgate the 'Carta Organic' Law"
+ POR_promulgate_the_carta_organic_law_desc:0 ""
+ POR_decree_on_missionary_activities:0 "Decree on Missionary Activities"
+ POR_decree_on_missionary_activities_desc:0 ""
+ POR_fortify_the_angolan_congo_border:0 "Fortify the Angolan-Congo Border"
+ POR_fortify_the_angolan_congo_border_desc:0 ""
+ POR_fortify_the_angolan_german_border:0 "Fortify the Angolan-German Border"
+ POR_fortify_the_angolan_german_border_desc:0 ""
+ POR_fortify_the_angolan_british_border:0 "Fortify the Angolan-British Border"
+ POR_fortify_the_angolan_british_border_desc:0 ""
+ POR_collect_poll_taxes_in_east_timor:0 "Collect Poll Taxes in East Timor"
+ POR_collect_poll_taxes_in_east_timor_desc:0 ""
+ POR_abolish_the_kongolese_titular_monarchy:0 "Abolish the Kongolese Titular Monarchy"
+ POR_abolish_the_kongolese_titular_monarchy_desc:0 ""
+ POR_revoke_the_mozambique_company_concession:0 "Revoke the Mozambique Company Concession"
+ POR_revoke_the_mozambique_company_concession_desc:0 ""
+ POR_beira_sponsor_operations:0 "Beira Sponsor Operations"
+ POR_beira_sponsor_operations_desc:0 ""
+ POR_subsidize_nyassa_consolidated:0 "Subsidize Nyassa Consolidated"
+ POR_subsidize_nyassa_consolidated_desc:0 ""
 
  BHR_move_capital:0 "Move Capital to Manama"
 
