--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -9527,6 +9527,13 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ww1_portugal.33.t: "Paiva Couceiro restores Manuel II"
  ww1_portugal.33.d: "King Manuel II has been coronated and the Kingdom of Portugal has been formally restored, with the Monarchist cause in control."
  ww1_portugal.33.a: "Vis Unita Maior Nunc et Semper"
+
+ ww1_portugal.34.t: "End of the Chokwe Dominance"
+ ww1_portugal.35.t: "Decree on Forced Labor Passed"
+ ww1_portugal.36.t: "Spreading Our Ideals"
+ ww1_portugal.37.t: "The Sale of Niassa Shares"
+ ww1_portugal.38.t: "Demand Centralization in Mbunda"
+
  ww1_portugal_news.1.t: "Revolution in Portugal"
  ww1_portugal_news.1.d_republic: "Mirroring their former colony, Brazil, the Republicans of Portugal have couped the monarchy. A string of blunders by the Monarchy, mostly concerning the colonies and technological development, provoked a very small band of rebels to come together, which quickly earned the support of nearly the entire military.\n\nThough the issues the Monarchy faced are unlikely to be easily solved any time soon, at least the anger of the public is quenched, for now."
  ww1_portugal_news.1.d_kingdom: "In Portugal, there was an attempt coup. Republican leaders announced the start of a revolution that began with mass demonstrations. The army was divided, some of the generals sided with the Republican Party, but monarchist forces resisted.\n\nKing Manuel II refused to abdicate and called on loyal subjects to resist the republican rebellion. The Portuguese Civil War began."
