--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -1308,6 +1308,9 @@
  SOV_focus_support_equipment: "Enhance Support Equipment Production"
  SOV_focus_artillery_equipment: "Enhance Artillery Production"
  SOV_focus_plane_equipment: "Enhance Fighter Production"
+ SOV_czechs_leave_via_siberia:0 "Disarmament of the Czechoslovak Legion"
+ SOV_czechs_leave_via_siberia_desc:0 "The Czechoslovak Legion, composed of Czech and Slovak soldiers formerly aligned with the provisional government, now finds itself stranded within our borders amidst the chaos of civil war. Their allegiance is uncertain, and their presence could embolden counter-revolutionary elements or support local revolts against our government. To safeguard the revolution and prevent any insurrection, we must take decisive action to disarm the legion."
+ SOV_czechs_leave_via_siberia_tt:0 "§RThe Czechoslovak Legion might revolt if any local Soviet takes decisive military action to disarm and intern them.§!"
 
  #VLN
  VLN_recruit_units:0 "Recruit Black Guard in [FROM.getName]"
