--- a/localisation/russian/ww1_decisions_l_russian.yml
+++ b/localisation/russian/ww1_decisions_l_russian.yml
@@ -1308,6 +1308,14 @@
  SOV_focus_support_equipment: "Расширить производство дополнительного оснащения"
  SOV_focus_artillery_equipment: "Расширить производство артиллерии"
  SOV_focus_plane_equipment: "Расширить производство истребителей"
+ SOV_czechs_leave_via_siberia:0 "Разоружение Чехословацкого легиона"
+ SOV_czechs_leave_via_siberia_desc:0 "Чехословацкий легион, состоящий из чешских и словацких солдат, ранее поддерживавших Временное Правительство, теперь оказался на территории нашей страны в условиях хаоса гражданской войны. Их верность неясна, и своим присутствием они могут подтолкнуть контрреволюционные элементы к поддержке местных восстаний против нашего правительства. Чтобы защитить революцию и предотвратить восстание, мы должны предпринять решительные действия по разоружению легиона."
+ SOV_czechs_leave_via_siberia_tt:0 "§RЧехословацкий легион может восстать, если какой-нибудь местный совет предпримет решительные военные шаги по их разоружению и интернированию.§!"
+
+ #VLN
+ VLN_recruit_units:0 "Завербовать Черную гвардию в [FROM.getName]"
+ VLN_3_infantry_unit:0 "Сформирует 3 дивизии Черной гвардии."
+ VLN_core_states:0 "Создать анархистские коммуны в [FROM.getName]"
 
  ITA_libyan_war_mission:0 "Итало-турецкая война"
  ITA_libyan_war_mission_desc:0 "Если [ITA.GetNameDef] не сможет захватить Ливию как можно скорее и затянет с интервенцией, [TUR.GetNameDef] сможет провести Лондонскую конференцию и потребовать репарации от итальянцев."
