--- a/localisation/russian/ww1_ideas_l_russian.yml
+++ b/localisation/russian/ww1_ideas_l_russian.yml
@@ -1538,7 +1538,7 @@
  
  #GERMANY
  GER_hungarian_crisis:0 "Венгерский кризис"
- GER_hungarian_crisis_desc:0 "После неожиданного объявления войны из-за статуса Венгрии, [GER.GetAdjective]ая оказывается совершенно не готовой к полномасштабному вторжению во Францию."
+ GER_hungarian_crisis_desc:0 "После неожиданного объявления войны из-за статуса Венгрии, [GER.GetAdjective]ая армия оказывается совершенно не готовой к полномасштабному вторжению во Францию."
  GER_zeppelin_bombing:0 "Бомбардировка цеппелинами"
  GER_idea_german_exploitation:0 "Немецкая эксплуатация"
  GER_idea_economic_pressure:0 "Немецкое экономическое давление"
