--- a/localisation/english/ww1_germany_l_english.yml
+++ b/localisation/english/ww1_germany_l_english.yml
@@ -220,6 +220,11 @@ ww1_germanrework.44.t:0 "The State of the Navy"
  ww1_germanrework.44.d:0 ""
  ww1_germanrework.44.a:0 "Onwards, to our place in the sun"
 
+#Moltke having a stroke, poor guy
+ww1_germanrework.46.t:0 "Moltke forced to retire"
+ ww1_germanrework.46.d:0 ""
+ ww1_germanrework.46.a:0 "Well good luck to Falkenhayn"
+
 #The Zabern Affair
 #A Crisis Stirs
 ww1_germanrework.26.t:0 "A Crisis Stirs"
