Focus: The Front Stalls

--- a/localisation/english/ww1_germany_l_english.yml
+++ b/localisation/english/ww1_germany_l_english.yml
@@ -52,6 +52,8 @@ GER_ohl_rc:0 "OHL Command"
 GER_ohl_final:0 "OHL Command"
 GER_1907_federal_budget:0 "The 1907 Federal Budget"
 GER_1907_federal_budget_desc:0 ""
+GER_lost_momentum:0 "Lost Momentum"
+GER_lost_momentum_desc:0 ""
 
 #Put stuff in the right place Mici!
 GER_state_of_the_military:0 "State of the Military"
