Alternative Ukrainian civil war ending

--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -11837,6 +11837,9 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ww1_soviet.50.c: "Take that!"
  ww1_soviet.50.d: "Terror becomes the norm in Russia."
  lenin_is_dead: "Lenin is dead"
+ ww1_soviet.51.t: "Revolution Extinguishes In Ukraine"
+ ww1_soviet.51.d: "Our military campaign to liberate the Little Russians by igniting a flame of the revolution has failed: the Soviet local government has already lost all influence."
+ ww1_soviet.51.a: "So long my love."
 
  #BELARUS
  ww1_belorussia.1.t: "Soviet Republic of Belorussia"
