--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -4877,9 +4877,17 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ottoman.150.b:0 "East to the West, we shall secure the freedom of Turks."
  ottoman.150.c:0 "We run to the rescue of our allies."
  ottoman.150.e:0 "Balkan War 2.5?"
+ ottoman.151.t:0 "Ottoman Surrender in Western Thrace"
+ ottoman.151.d:0 "What started with the status of Western Thrace soon turned into a full blown war. As we pushed deep into the Ottoman territory, the empire has declared its intention to sue for peace. The resulting peace shall not only alter Ottoman-Bulgarian border, but shall seek to protect other Christians in the empire too."
+ ottoman.151.a:0 "Even back with our Balkan War gains."
+ ottoman.151.b:0 "Even the Armenians are safe now."
  ottoman.151.b.tt:0 "Becomes owned and controlled by §YArmenian Vilayet§!."
  ottoman.151.b.tt2:0 "§YArmenian Vilayet§! becomes §YAutonomous Vilayet§! of §Y[TUR.GetName]§!."
  ottoman.151.b.tt3:0 "\n\nAdd §YAnatolian Vilayet§! which grants:\n§YStability Factor§! and §YWar Support Factor§! will §Rdecrease§! depending on the §Yminorities§! the states we control and the §Ypolicies§! we enact on them.\n\n"
+ ottoman.152.t:0 "[FROM.GetAdjective] Surrender on the East"
+ ottoman.152.d:0 "What started with the intention of securing the independence of Western Thrace soon turned into a full blown war. Yet thanks to our brave soldiers, our enemies have caved in for a peace. Through several border adjustments here and administrative restructuring there, we can achieve a resonable peace."
+ ottoman.152.a:0 "Western Thrace is secured."
+ ottoman.152.b:0 "War in the East is over."
 
  ottoman_syria.1.t:0 "Küçük Cemal to Syria"
  ottoman_syria.1.d:0 "As the 4th army is being organized in Syria, governor responsible of the Syrian provinces [TRS.GetLeader] has requested the appointment of Mehmed Cemal Paşa. In order to provide a greater military presence in the region, Küçük Cemal Paşa will be appointed to Syria."
