Altering modifier and event for Hindenburg

--- a/localisation/english/ww1_germany_l_english.yml
+++ b/localisation/english/ww1_germany_l_english.yml
@@ -227,6 +227,11 @@ ww1_germanrework.46.t:0 "Moltke forced to retire"
  ww1_germanrework.46.d:0 ""
  ww1_germanrework.46.a:0 "Well good luck to Falkenhayn"
 
+#Falk Removed
+ww1_germanrework.47.t:0 "Falkenhayn Removed as Chief of the Army"
+ ww1_germanrework.47.d:0 ""
+ ww1_germanrework.47.a:0 "Well good luck to Hindenburg"
+
 #The Zabern Affair
 #A Crisis Stirs
 ww1_germanrework.26.t:0 "A Crisis Stirs"
