Revert "wrong loc placement"
This reverts commit 9a407d2220d4df103d9ec4f048ef09cd9a75c295.

--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -10857,4 +10857,180 @@ VIN_complete_the_western_railway_desc:0 "Our relations with Siam are still cold,
 # Tooltips
 
 unlocks_national_focus_tt: "§YNational Focus§! becomes §GAvailable§!:"
+
+#bulgaria
+liberal_stabilizer:0 "Liberal Stabilizer"
+nationalist_unifier_and_banker:0 "Nationalist Unifier and Banker"
+left_side_range:0 "Low Authority"
+bul_middle_left_side_range:0 "Medium Authority"
+bul_far_left_side_range:0 "High Authority"
+bul_coup_left_side_range:0 "Absolute Authority"
+bul_constitutional_assembly_authority_left_side:0 "Constitutional Assembly Authority"
+bul_tsar_authority_right_side:0 "Tsar Authority"
+bul_balance_range:0 "Balanced"
+BUL_BoP:0 "Tsar-Constitutional Assembly Struggle"
+bul_right_side_range:0 "Low Tsar Authority"
+bul_middle_right_side_range:0 "Medium Tsar Authority"
+bul_far_right_side_range:0 "High Tsar Authority"
+bul_coup_right_side_range:0 "Absolute Tsar Authority"
+BUL_yosif_l:0 "Bulgarian Exarchate"
+BUL_ruse_blood_wedding_ordeal:0 "Ruse Blood Wedding Ordeal"
+BUL_peasantry:0 "Peasantry"
+roman_catholic:0 "Roman-Catholic"
+BUL_prince_kyril:0 "Prince Kyril"
+multifaceted_old_hand:0 "Multifaceted Old-Hand"
+serbo_bulgarian_defence_agreement:0 "Serbo-Bulgarian Defense Agreement"
+
+###########BULGARIA FOCUS##########
+
+BUL_proud_orthodox_state: "Proud Orthodox State"
+BUL_proud_orthodox_state_desc: "Bulgaria has always been a staunch defender of Orthodoxy. It is time to reaffirm our commitment to the church, solidifying Bulgaria as a proud Orthodox state."
+
+BUL_emphasize_religious_freedom: "Emphasize Religious Freedom"
+BUL_emphasize_religious_freedom_desc: "In a modern and diverse world, it is necessary to move beyond rigid religious structures and embrace religious freedom for all citizens, promoting harmony in society."
+
+BUL_switch_to_the_gregorian_calendar: "Switch to the Gregorian Calendar"
+BUL_switch_to_the_gregorian_calendar_desc: "Adopting the Gregorian calendar will align Bulgaria with the majority of Europe and streamline international relations and commerce."
+
+BUL_christianity_only: "Christianity Only"
+BUL_christianity_only_desc: "We shall ensure that Christianity, particularly Orthodoxy, remains the dominant force in Bulgaria, rejecting any deviation from our religious roots."
+
+BUL_realize_the_yield_of_agrarianism: "Realize the Yield of Agrarianism"
+BUL_realize_the_yield_of_agrarianism_desc: "Agriculture is the backbone of our nation. By emphasizing agrarian policies, we can increase yields and improve the economy."
+
+BUL_industrial_priority: "Industrial Priority"
+BUL_industrial_priority_desc: "Industry must take precedence if Bulgaria is to modernize. Let us shift our focus towards expanding industrial sectors and building a future-ready economy."
+
+BUL_reform_the_textile_industry: "Reform the Textile Industry"
+BUL_reform_the_textile_industry_desc: "The textile industry has long been a key player in Bulgaria's economy. Reforms will increase efficiency and improve our economic standing."
+
+BUL_question_of_funds: "Question of Funds"
+BUL_question_of_funds_desc: "Financing Bulgaria's modernization efforts is essential. We must address the question of funds to ensure the success of our industrial revolution."
+
+BUL_question_of_peasentry: "Question of Peasantry"
+BUL_question_of_peasentry_desc: "The Bulgarian peasantry forms the core of our rural economy. We must address their concerns and integrate them into our broader economic plan."
+
+BUL_question_of_ownership: "Question of Ownership"
+BUL_question_of_ownership_desc: "Land ownership and the distribution of assets remain contentious issues. By resolving these, we can pave the way for a stable and prosperous future."
+
+BUL_capitalize_of_grain_exports: "Capitalize on Grain Exports"
+BUL_capitalize_of_grain_exports_desc: "Our fertile lands provide us with abundant grain. Let us capitalize on this natural advantage by expanding our grain exports."
+
+BUL_expand_light_industries: "Expand Light Industries"
+BUL_expand_light_industries_desc: "Light industries play a crucial role in our economy. By expanding them, we can support the broader industrial sector and create more jobs."
+
+BUL_expand_the_dairy_market: "Expand the Dairy Market"
+BUL_expand_the_dairy_market_desc: "Bulgaria's dairy industry has the potential for growth. Expanding this sector will benefit our rural communities and increase export revenue."
+
+BUL_bolster_flour_mills: "Bolster Flour Mills"
+BUL_bolster_flour_mills_desc: "With growing grain exports, it is crucial to bolster our flour mills to keep up with demand and ensure a steady food supply."
+
+BUL_finish_urbanizing_sofia: "Finish Urbanizing Sofia"
+BUL_finish_urbanizing_sofia_desc: "The capital, Sofia, is the heart of Bulgaria. Completing its urbanization will establish it as a modern European city, ready to lead the nation."
+
+BUL_maize_sales: "Maize Sales"
+BUL_maize_sales_desc: "Bulgaria's maize production is essential for both domestic consumption and exports. Expanding maize sales will contribute to the economy."
+
+BUL_alcohol_manufacturing: "Alcohol Manufacturing"
+BUL_alcohol_manufacturing_desc: "Our fertile lands and agricultural output make Bulgaria an ideal location for alcohol production. Expanding this industry will diversify our economy."
+
+BUL_ameliorate_steel_works: "Ameliorate Steel Works"
+BUL_ameliorate_steel_works_desc: "Steel production is key to industrial growth. By improving our steelworks, we can ensure a steady supply of this vital resource."
+
+BUL_sell_food_surplus: "Sell Food Surplus"
+BUL_sell_food_surplus_desc: "Bulgaria produces more food than it needs. Selling the surplus to other nations will boost our economy and provide much-needed funds."
+
+BUL_surplus_for_the_army: "Surplus for the Army"
+BUL_surplus_for_the_army_desc: "Instead of selling our food surplus, we can use it to bolster our army, ensuring that our soldiers are well-fed and ready for any conflict."
+
+BUL_road_projects: "Road Projects"
+BUL_road_projects_desc: "Improving Bulgaria's road infrastructure is essential for supporting both the civilian and military sectors. Let us invest in road projects to enhance mobility."
+
+BUL_introduce_arms_factories: "Introduce Arms Factories"
+BUL_introduce_arms_factories_desc: "A strong military needs a reliable supply of arms. By introducing arms factories, we can ensure that Bulgaria's military is well-equipped."
+
+BUL_electricity_works: "Electricity Works"
+BUL_electricity_works_desc: "Expanding Bulgaria's electricity network will power our factories and homes, driving both industrial and social progress."
+
+BUL_intensify_train_manufacturing: "Intensify Train Manufacturing"
+BUL_intensify_train_manufacturing_desc: "Trains are the lifeblood of industrial transport. By intensifying train manufacturing, we can ensure efficient movement of goods and people."
+
+BUL_military_focused_industry: "Military Focused Industry"
+BUL_military_focused_industry_desc: "With tensions rising, we must focus our industrial capacity on military production, ensuring that our armed forces are prepared for any threat."
+
+BUL_civilian_focused_industry: "Civilian Focused Industry"
+BUL_civilian_focused_industry_desc: "Rather than focus solely on military production, we can invest in civilian industries to improve the overall economy and quality of life."
+
+BUL_increase_livestock_sales: "Increase Livestock Sales"
+BUL_increase_livestock_sales_desc: "Bulgaria's livestock industry has untapped potential. Increasing livestock sales will strengthen the rural economy and boost exports."
+
+BUL_exporting_lumber: "Exporting Lumber"
+BUL_exporting_lumber_desc: "Our forests are a valuable resource. By exporting lumber, we can diversify our economy and meet international demand for timber."
+
+BUL_profiteering_on_wine_exclusivity: "Profiteering on Wine Exclusivity"
+BUL_profiteering_on_wine_exclusivity_desc: "Bulgaria produces some of the finest wines. By controlling the wine market, we can profit from its exclusivity and expand our economic influence."
+
+BUL_partly_industrialized_bulgaria: "Partly Industrialized Bulgaria"
+BUL_partly_industrialized_bulgaria_desc: "Bulgaria is making strides toward industrialization, though we are not fully there yet. Continued effort is needed to become a modern industrial power."
+
+BUL_the_new_tsardom: "The New Tsardom"
+BUL_the_new_tsardom_desc: "Re-establish the authority of the Tsar and strengthen national identity."
+
+BUL_appoint_geshov: "Appoint Ivan Evstratiev Geshov"
+BUL_appoint_geshov_desc: "Appoint Geshov as Prime Minister to lead our government."
+
+BUL_introduction_of_proportional_representation: "Introduction of Proportional Representation"
+BUL_introduction_of_proportional_representation_desc: "Introduce proportional representation in our political system."
+
+BUL_amending_the_silver_constitution: "The Silver Constitution"
+BUL_amending_the_silver_constitution_desc: "Amend the Silver Constitution to reflect the current political landscape."
+
+BUL_renew_balkan_policy: "Renew Balkan Policy"
+BUL_renew_balkan_policy_desc: "Renew our policy towards the Balkans, focusing on diplomacy and cooperation."
+
+BUL_negotiations_with_serbia: "Negotiations with Serbia"
+BUL_negotiations_with_serbia_desc: "Initiate negotiations with Serbia to strengthen ties and address mutual concerns."
+
+BUL_rapprochment_with_the_turks: "Rapprochement With The Turks"
+BUL_rapprochment_with_the_turks_desc: "Seek to improve relations with the Ottoman Empire through diplomacy."
+
+BUL_successful_rapprochment: "Successful Rapprochement"
+BUL_successful_rapprochment_desc: "Achieve a successful diplomatic agreement with the Ottomans."
+
+BUL_failed_rapprochment: "Failed Rapprochement"
+BUL_failed_rapprochment_desc: "Experience a failed attempt at rapprochement with the Ottomans, leading to increased tensions."
+
+BUL_arrival_of_the_industrial_revolution: "Arrival of the Industrial Revolution"
+BUL_arrival_of_the_industrial_revolution_desc: "Embrace the industrial revolution to modernize our economy."
+
+BUL_authorize_arms_purchases: "Authorize Arms Purchases"
+BUL_authorize_arms_purchases_desc: "Authorize the purchase of arms from foreign powers to strengthen our military."
+
+BUL_encourage_foreign_investments: "Encourage Foreign Investments"
+BUL_encourage_foreign_investments_desc: "Encourage foreign investments to boost our economy and industry."
+
+BUL_successful_negotiations: "Successful Negotiations"
+BUL_successful_negotiations_desc: "Successful negotiations with our Balkan neighbors, leading to greater cooperation."
+
+BUL_failed_negotiations: "Failed Negotiations"
+BUL_failed_negotiations_desc: "Negotiations failed, increasing tensions with Serbia."
+
+BUL_the_macedonian_question: "The Macedonian Question"
+BUL_the_macedonian_question_desc: "Address the complex Macedonian question and its implications for our region."
+
+BUL_ruse_blood_wedding_controversy: "Ruse Blood Wedding Controversy"
+BUL_ruse_blood_wedding_controversy_desc: "Controversies surrounding the Ruse blood wedding stir political tensions."
+
+BUL_reenforce_the_1878_temporary_law_on_national_schools: "Re-enforce the 1878 Temporary Law on National Schools"
+BUL_reenforce_the_1878_temporary_law_on_national_schools_desc: "Reinforce the 1878 law to support national schools and education."
+
+BUL_independent_bulgarian_exarchate: "Independent Bulgarian Exarchate"
+BUL_independent_bulgarian_exarchate_desc: "Establish an independent Bulgarian Exarchate to enhance religious authority."
+
+BUL_religious_academies: "Religious Academies"
+BUL_religious_academies_desc: "Found religious academies to promote education and spiritual leadership."
+
+BUL_found_universities_and_colleges: "Found Universities and Colleges"
+BUL_found_universities_and_colleges_desc: "Found universities and colleges to foster higher education."
+
 unlocks_national_focus_tt: "§YNational Focus§! becomes §GAvailable§!:"
